k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ops-view
  labels:
    istio-injection: enabled
