k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: kube-ops-view
  name: kube-ops-view
spec:
  replicas: 1
  selector:
    matchLabels:
      service: kube-ops-view
  template:
    metadata:
      labels:
        service: kube-ops-view
        version: v0.11
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      serviceAccount: kube-ops-view
      priorityClassName: high-priority
      containers:
        - name: service
          image: hjacobs/kube-ops-view:23.5.0
          args:
            # remove this option to use built-in memory store
            - --redis-url=redis://redis:6379
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              memory: 100Mi
              cpu: 50m
            requests:
              cpu: 10m
              memory: 10Mi
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      tolerations:
      - effect: NoSchedule
        key: cloud.google.com/gke-spot
        operator: Equal
        value: "true"
