k8s/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    service: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  template:
    metadata:
      labels:
        service: redis
    spec:
      priorityClassName: high-priority
      containers:
        - name: redis
          image: redis:5-alpine
          command:
            - redis-server
            - "/redis-master/redis.conf"
          ports:
            - containerPort: 6379
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 6379
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 50Mi
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
            - mountPath: /redis-master
              name: config
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            # we need to use the "redis" uid
            runAsUser: 100
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: redis-conf
            items:
              - key: redis-config
                path: redis.conf
