k8s/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kube-ops-view
  name: kube-ops-view
spec:
  selector:
    application: kube-ops-view
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
