k8s/06-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kube-ops-view-redis
  name: kube-ops-view-redis
spec:
  selector:
    application: kube-ops-view-redis
  type: ClusterIP
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: kube-ops-view-redis
    version: v0.0.1
  name: kube-ops-view-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-ops-view-redis
  template:
    metadata:
      labels:
        application: kube-ops-view-redis
        version: v0.0.1
    spec:
      priorityClassName: system-cluster-critical
      # NB: this affects all pods on the host where redis starts up
      containers:
      - name: redis
        image: redis:5-alpine
        command:
          - redis-server
          - "/redis-master/redis.conf"
        ports:
        - containerPort: 6379
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 6379
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
          - mountPath: /redis-master-data
            name: data
          - mountPath: /redis-master
            name: config
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          # we need to use the "redis" uid
          runAsUser: 100
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: redis-conf
            items:
              - key: redis-config
                path: redis.conf
        - name: host-sys
          hostPath:
            path: /sys
