k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: kube-ops-view
  name: kube-ops-view
spec:
  selector:
    service: kube-ops-view
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: redis
  name: redis
spec:
  selector:
    service: redis
  type: ClusterIP
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
