k8s/05-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ops-view
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required!'
spec:
  tls:
  - secretName: kube-ops-view-tls
    hosts:
    - ${APP_HOSTNAME}
  rules:
  - host: ${APP_HOSTNAME}
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-ops-view
          servicePort: 80
