k8s/ingress.yaml
# nginx.ingress.kubernetes.io/auth-type: basic
# nginx.ingress.kubernetes.io/auth-secret: basic-auth
# nginx.ingress.kubernetes.io/auth-realm: "Authentication Required!"
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kube-ops-view
spec:
  parentRefs:
  - kind: Gateway
    name: shared-gateway
    namespace: ingress
  hostnames:
  - ops-view.alexos.dev
  rules:
  - backendRefs:
    - name: kube-ops-view
      port: 8080
